plugins {
	id 'org.springframework.boot' version '2.5.6'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'chengweiou.universe'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	maven {
		url = uri('https://maven.pkg.github.com/chengweiou/blackhole')
		credentials {
			username = project.findProperty('gpr.user') ?: System.getenv('USERNAME')
			password = project.findProperty('gpr.key') ?: System.getenv('TOKEN')
		}
	}
	mavenCentral()
}

ext {
	set('springCloudVersion', "2020.0.4")
}

dependencies {
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'org.bouncycastle:bcprov-jdk15on:1.69'
	implementation 'redis.clients:jedis:3.7.0'
	implementation 'eu.bitwalker:UserAgentUtils:1.21'
	implementation 'org.springframework.security:spring-security-crypto:5.5.3'

	implementation 'chengweiou.universe:blackhole:0.0.53'
	implementation 'com.google.code.gson:gson:2.8.9'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	// for log4j2 yml
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.3'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

test {
	useJUnitPlatform()
}
